recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:6: error: not found: value longueur
    avance(longueur)
           ^Tree:11: error: not found: value ree
    ree(steps-1,length*shrink,angle,shrink)
    ^