recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps==0){
    return
  } else {
    current(steps)
    avance(longueur)
    droite(angle)
    tree(steps-1,length*shrink,angle,shrink)
    gauche(angle)
    gauche(angle)
    ree(steps-1,length*shrink,angle,shrink)
    
  }
}